feat: first commit

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "homepage": "https://github.com/mongodb-university/atlas_starter_nodejs#readme",
   "dependencies": {
-    "mongodb": "^3.5.9"
+    "dotenv": "^16.4.5",
+    "mongodb": "^6.3.0"
   }
 }
