--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
   },
   "homepage": "https://github.com/mongodb-university/atlas_starter_nodejs#readme",
   "dependencies": {
+    "axios": "^1.6.7",
     "dotenv": "^16.4.5",
+    "express": "^4.18.2",
     "mongodb": "^6.3.0"
   }
 }
